--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
           </div>
         </div>
     </nav>
-    <div class="container" id="publicaciones">
-        
-       
-    </div>
+    <form class="container my-3" action="api/publicaciones/create.php" method="post" id="add_post">
+      <div><textarea class="form-control" name="contenido"></textarea></div>
+      <div><button class="btn btn-primary">publicar</button></div>
+    </form>
+    <div class="container" id="publicaciones"></div>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="publicaciones.js"></script>  
