crud basico terminado

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
         </div>
     </nav>
-    <form class="container my-3" action="api/publicaciones/create.php" method="post" id="add_post">
+    <form class="container my-3" action="api/publicaciones/create" method="post" id="add_post">
       <div><textarea class="form-control" name="contenido"></textarea></div>
       <div><button class="btn btn-primary">publicar</button></div>
     </form>
